# OS

Ex02/: CMakeLists.txt
Ex02/xv6/: Makefile  defs.h  exec.c  gdbutil  param.h  pc.c  proc.c  proc.h  run  semaphores.c  semaphores.h  sysfile.c  sysproc.c  test.h  testex2.c  user.h  usys.S
Ex03/: .gitignore  CMakeLists.txt
Ex03/xv6/: .dir-locals.el  .gdbinit.tmpl  Makefile  READ_ME  bio.c  bochsout.txt  defs.h  dot-bochsrc  entryother.S  exec.c  fcntl.h  file.c  file.h  fs.c  fs.h  kernel.ld  main.c  my_test.c  pc.c  pc_def.c  proc.c  proc.h  run  runoff.list  semaphores.c  syscall.c  syscall.h  sysfile.c  sysproc.c  test.c  user.h  usys.S
ex1/q1/: CMakeLists.txt
ex1/q1/step1/: tri  triangles.c
ex1/q1/step2/: err  tri  triangles.c
ex1/q1/step3/: in.txt  tri  triangles.c
